# table-segmenter

./: .gitignore  LICENSE.txt  README.md  pull_new_experiments.sh  push_new_experiments.sh  pyproject.toml  remove_local_experiment_branches.sh  rename_old_experiment_branches.sh  run_experiments.sh
table_segmenter/: conf.py  eval.py  io.py  metrics.py  model.py  predict.py  preprocessing.py  segment_table.py  train.py
