[tool.poetry]
name = "table-segmenter"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.4"
opencv-python = "^4.5.4"
tensorflow = "^2.10.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
