[tool.poetry]
name = "table-segmenter"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.4"
opencv-python = "^4.5.4"
tqdm = "^4.62.3"

[tool.poetry.dependencies.tensorflow]
version = "~2.15.0"
markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"

[tool.poetry.dependencies.tensorflow-macos]
version = "~2.15.0"
markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
